--- a/package.json
+++ b/package.json
@@ -1,23 +1,20 @@
 {
   "name": "forkify",
   "version": "1.0.0",
-  "description": "Recipe application",
-  "default": "index.html",
-  "browserslist": "> 0.5%, last 2 versions, not dead",
-  "targets": {
-    "main": false
-  },
+  "description": "Recipe application with custom recipe uploads.",
+  "main": "controller.js",
   "scripts": {
     "start": "parcel index.html",
-    "build": "parcel build index.html --dist-dir ./dist"
+    "build": "parcel build index.html"
   },
-  "author": "Jonas Schedtmann",
+  "author": "Firat",
   "license": "ISC",
   "devDependencies": {
-    "@parcel/transformer-sass": "^2.2.1",
-    "parcel": "^2.2.1"
+    "@parcel/transformer-sass": "^2.9.3",
+    "parcel": "^2.9.3",
+    "sass": "^1.67.0"
   },
   "dependencies": {
-    "fracty": "^1.0.9"
+    "fracty": "^1.0.11"
   }
 }
